@startuml CSIT321_Schema
/'Forum and Discussion Creation'/
    class ForumBoard {
        +boardID: varchar[255] \t\t\t|\t NOT NULL
        +topic: varchar[50] \t\t\t|\t NOT NULL
        +description: varchar[255] \t|\t NOT NULL

        +getForum()
        *updateForum()
    }

    ForumBoard "1" -- "1..*" Post : Will Have >
    User "1" -- "0..*" Post : Can Create >

    class Post{
        +postID: varchar[255] \t\t\t|\t NOT NULL
        +boardID: varchar[255] \t\t\t|\t NOT NULL
        +userID: varchar[255] \t\t\t|\t NULL
        +profID: varchar[255] \t\t\t\t|\t NULL
        +content: varchar[255] \t\t|\t NOT NULL
        +creationDateTime: datetime \t|\t NOT NULL
        +editDateTime: datetime \t\t|\t NULL
        +numOfReplies: integer \t\t|\t NULL

        +getPost()
        *updatePost()
    }

    Post "1" -- "0..*" Comment : Can Have >

    class Comment{
        +commentID: varchar[255] \t\t\t|\t NOT NULL
        +postID: varchar[255] \t\t\t|\t NOT NULL
        +userID: varchar[255] \t\t\t|\t NULL
        +profID: varchar[255] \t\t\t\t|\t NULL
        +content: varchar[255] \t\t|\t NOT NULL
        +creationDateTime: datetime \t|\t NOT NULL

        +getComment() \t\t\t|\treturn: varchar[255]
    }

/'journal'/

    User "1" -- "0..*" HealthJournal : Can Create >

    class HealthJournal{
        +journalID: varchar[255] \t\t\t|\t NOT NULL
        +userID: varchar[255] \t\t\t|\t NOT NULL
        +entryDate: datetime \t\t|\t NOT NULL
        +feeling: varchar[255] \t\t|\t NULL
        +gratitudes: varchar[255] \t\t|\t NULL
        +selfCare: varchar[255] \t\t|\t NULL
        +thoughts: varchar[255] \t\t|\t NULL
        +dailyRating: integer \t\t\t|\t NULL

        +getHealthJournal()
        *updateHealthJournal()
    }

    User "1" -- "0..*" Checklist : Can Create >

    class Checklist{
        +checklistID: varchar[255] \t\t\t|\t NOT NULL
        +userID: varchar[255] \t\t\t|\t NOT NULL
        +listTitle: varchar[255] \t\t|\t NOT NULL
        +listDescription: varchar[255] \t|\t NULL
        
        +getChecklist()
        *updateChecklist()
    }

    Checklist "1" -- "0..*" ChecklistItems : Can Have >

    class ChecklistItems{
        +itemID: varchar[255] \t\t\t|\t NOT NULL
        +checklistID: varchar[255] \t\t\t|\t NOT NULL
        +item: varchar[255] \t\t|\t NOT NULL
        
        +getItem()
        *updateItem()
    }

/'User Creation'/
    class User {
        +userID: varchar[255]\t\t\t\t|\t NOT NULL
        +firstName: varchar[50]\t\t|\t NOT NULL
        +lastName: varchar[50]\t\t|\t NOT NULL
        +emailAddress: varchar[255]\t|\t NOT NULL
        +phoneNum: varchar[50]\t\t|\t NOT NULL
        +userBio: varchar[255]\t\t|\t NULL
        +passHash: varchar[255]\t\t|\t NULL
        +isExpectingMother: boolean\t|\t NOT NULL

        +getUser()
        *updateUser()
    }

    User "1" -- "1" UserAddress : Lives At >

    class UserAddress{
        +userID: varchar[255]\t\t\t\t|\t NOT NULL
        +unitNumber: varchar[50]\t\t|\t NULL
        +streetNumber: varchar[50]\t|\t NOT NULL
        +streetName: varchar[255]\t|\t NOT NULL
        +suburb: varchar[255]\t\t|\t NOT NUL
        +state: varchar[255]\t\t\t|\t NOT NUL
        +country: varchar[255]\t|\t NOT NULL

        +getAddress()
        *updateAddress()
    }

    ExpectingMother "0..1" -- "1" User : Can Be >

    class ExpectingMother {
        +userID: varchar[255]\t|\t NOT NULL
    }

    ExpectingMother "1" -- "1" HealthRecord : Has >

    class HealthRecord{
        +userID: varchar[255]\t\t\t\t\t|\t NOT NULL
        +age: integer\t\t\t\t\t|\t NOT NULL
        +height: integer\t\t\t\t\t|\t NULL
        +weight: integer\t\t\t\t\t|\t NULL
        +pregnancyPhase: varchar[255]\t|\t NOT NULL
        +weeksAlong: integer\t\t\t\t|\t NULL

        +getHealthRecord()
        *updateHealthRecord()
    }

    class HealthCareProfessional {
        +profID: varchar[255]\t\t\t\t|\t NOT NULL
        +firstName: varchar[50]\t\t|\t NOT NULL
        +lastName: varchar[50]\t\t|\t NOT NULL
        +emailAddress: varchar[255]\t|\t NOT NULL
        +phoneNum: varchar[50]\t\t|\t NOT NULL
        +workPhoneNum: varchar[50]\t|\t NULL
        +profBio: varchar[255]\t\t|\t NULL
        +ABN: varchar[50]\t\t\t|\t NOT NULL
        +passHash: varchar[255]\t\t|\t NULL
        +isConsultant: boolean\t\t|\t NOT NULL

        +getProfessional()
        *updateProfessional()
    }

    HealthCareProfessional "1" -- "1" ProfessionalAddress : Lives At >

    class ProfessionalAddress{
        +profID: varchar[255]\t\t\t\t|\t NOT NULL
        +unitNumber: varchar[50]\t\t|\t NULL
        +streetNumber: varchar[50]\t|\t NOT NULL
        +streetName: varchar[255]\t|\t NOT NULL
        +suburb: varchar[255]\t\t|\t NOT NUL
        +state: varchar[255]\t\t\t|\t NOT NUL

        +getAddress()
        *updateAddress()
    }

    Consultant "0..1" -- "1" HealthCareProfessional : Can Be <

    class Consultant {
        +profID: varchar[255]\t|\t NOT NULL
    }

    ProfessionalSkills "1..*" -- "1" HealthCareProfessional : Can Have <

    class ProfessionalSkills {
        +profID: varchar[255]\t\t|\t NOT NULL
        +skill: varchar[50]\t|\t NOT NULL

        +getSkill()
        *updateSkill()
    }

    User "1" -- "0..*" ConsultationRequests : Can Request >
    Consultant "1" -- "0..*" ConsultationRequests : Will Accept >

    class ConsultationRequests{
        +requestID: varchar[255] \t\t\t\t|\t NOT NULL
        +userID: varchar[255] \t\t\t\t|\t NOT NULL
        +profID: varchar[255]\t\t\t\t\t|\t NOT NULL
        +description: varchar[255] \t\t|\t NULL
        +communictionType: varchar[50] \t|\t NOT NULL
        +consultationDateTime: datetime \t|\t NOT NULL
        +status: varchar[50] \t\t\t\t|\t NOT NULL
        +preferredGender: varchar[50] \t\t|\t NULL

        +getConsultantRequests()
        *updateConsultantRequests()
    }

    ConsultationRequests "1" -- "0..*" ConsultationNotes : Can Create >

    class ConsultationNotes{
        +requestID: varchar[255] \t\t|\t NOT NULL
        +notes: varchar[255] \t\t|\t NOT NULL

        +getNotes()
        *updateNotes()
    }
@enduml